fix: Logo layout issue in IE11
- Remove a 180deg rotation of the logo in IE11 to fix a layout issue

--- a/src/scss/2021/components/_fixed-sides.scss
+++ b/src/scss/2021/components/_fixed-sides.scss
@@ -45,6 +45,11 @@
   transform: rotate(180deg);
   color: inherit;
 
+  @include ie11 {
+    // The 180deg rotation was causing layout issues in IE11
+    transform: none;
+  }
+
   &__svg {
     width: calc(21px * 0.75);
     height: calc(75px * 0.75);
